--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "run-p server",
-    "start": "node server"
+    "start": "node server.js"
   },
   "dependencies": {
     "connect-mongo": "^5.1.0",
