--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
-    "mongoose": "^8.14.0"
+    "mongoose": "^8.14.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
