--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "mongoose": "^8.14.0",
+    "nodemailer": "^6.10.1",
     "request": "^2.88.2"
   },
   "devDependencies": {
@@ -30,8 +31,14 @@
     "globals": "^16.0.0",
     "http-proxy-middleware": "^3.0.5",
     "npm-run-all": "^4.1.5",
+    "playwright": "^1.52.0",
     "request": "^2.88.2",
     "vite": "^6.3.1",
     "vite-plugin-svgr": "^4.3.0"
-  }
+  },
+  "main": "addUser.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
