--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "run-p server",
-    "start": "node server.js"
+    "start": "node server.js",
+    "heroku-postbuild": "npx playwright install chromium"
   },
   "dependencies": {
     "axios": "^1.9.0",
