--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "run-p server",
     "start": "node server.js",
-    "heroku-postbuild": "npx playwright install chromium"
+    "postinstall": "npx playwright install chromium"
   },
   "dependencies": {
     "axios": "^1.9.0",
